# Interactable_Agentferry

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
Reference/: README.md
dev_doc/: 1-Ameath-Respursed-Introduction.txt  2-decision-bootstrap-copy-and-scaffold-2026-07-05.md  3-design-camera-pet-v1-2026-07-05.md  4-plan-camera-pet-v1-2026-07-05.md  5-decision-copied-utils-log-2026-07-05.md  6-debug-signal-sig-mismatch-2026-07-05.md  7-debug-detection-base-size-2026-07-05.md  8-decision-camera-flip-2026-07-05.md  references.json
scripts/: download_models.sh
src/camera/: main.py  window.py
src/config/: settings.py
src/pet/: animation_player.py  controller.py  distance_tier.py  flight.py  gesture_mapper.py  gesture_smoother.py  head_exclusion.py  hover_bubble.py  idle_rotator.py  menu.py  music_timer.py  settings_dialog.py  settings_store.py  sound_manager.py  state_machine.py  window.py
src/utils/: coordinate_map.py  log.py  x11_binding.py
src/vision/: pipelines.py  worker.py
src/vision/reference/: face_detection_ref.py  gesture_classifier_ref.py  hand_tracking_ref.py  holistic_tracking_ref.py
tests/: test_camera_frame.py  test_coordinate_map.py  test_distance_tier.py  test_face_tracker.py  test_flight.py  test_gesture_mapper.py  test_gesture_smoother.py  test_head_exclusion.py  test_pet_controller.py  test_pinch_detector.py  test_settings_dialog.py  test_settings_store.py  test_vision_settings.py
