[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interactable-agentferry"
version = "0.1.0"
description = "Linux camera-driven desktop pet that follows your face, recognizes 6 MediaPipe gestures + pinch, and reacts with GIF / voice / music."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "Aemeath Contributors" },
]
keywords = [
  "desktop-pet",
  "mediapipe",
  "gesture-recognition",
  "face-tracking",
  "pyqt6",
  "opencv",
  "linux",
  "x11",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
  "Topic :: Multimedia :: Graphics :: Capture :: Video Capture",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
# 运行时依赖放在 requirements.txt（用户在 README 步骤 1 用 pip install -r）。
# 这里不重复声明以避免双源真相。
dependencies = []

[project.urls]
Homepage = "https://github.com/Yuxin-Luo/Interactable_Agentferry"
Issues = "https://github.com/Yuxin-Luo/Interactable_Agentferry/issues"
# Reference 项目（只读，本仓库不含）：
# - My_Code/Desktop_Agentferry（上一版 GPL v3）
# - code/MediaPipe-Real-Time-Computer-Vision-Demos

[project.scripts]
interactable-agentferry = "src.camera.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "Reference*", "assets*", "dev_doc*", "scripts*"]

[tool.setuptools.package-data]
"src" = ["../assets/**/*.gif", "../assets/**/*.wav", "../assets/**/*.mp3"]